tests/unit/language/errors/assert_pass.arche
// RUN: %arche build -o %t %s && %t | grep done
#import { fmt }
main :: proc() {
  fmt.printf("test\n");
  fmt.assert(1, "should not see this\n");
  fmt.printf("done\n");
}
